[tool.pdm]

[project]
name = "asv_runner"
description = "Core Python benchmark code for ASV"
authors = [
    { name = "Rohit Goswami", email = "rog32@hi.is" },
    { name = "Michael Droettboom", email = "mdroe@stsci.edu" },
]
maintainers = [
    { name = "Rohit Goswami", email = "rog32@hi.is" },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
  'License :: OSI Approved :: BSD License',
  'Topic :: System :: Benchmark',
]
version = "0.0.6"
dependencies = [] # Make sure there's nothing here
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[project.optional-dependencies]
docs = [
    'furo',
    'sphinx',
    'sphinx-contributors',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx-autobuild',
    'sphinxcontrib-spelling',
    "myst-parser>=2",
    "sphinx-autodoc2>=0.4.2",
]
[tool.pdm.dev-dependencies]
lint = [
    "ruff",
    "black",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88
extend-ignore = [
    "E741", # Do not use variables named 'I', 'O', or 'l'
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I001", # isort
]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.setuptools_scm]
write_to = "asv_runner/_version.py"

[tool.pdm.scripts]
lint = {composite = ["ruff --fix asv_runner/", "black asv_runner/"]}
mkdoc = {composite = ["sphinx-build -b html docs/source docs/build/html"]}

[project.urls]
homepage = "https://asv.readthedocs.io/projects/asv-runner/en/latest/"
repository = "https://github.com/airspeed-velocity/asv_runner"
documentation = "https://asv.readthedocs.io/projects/asv-runner/en/latest/"
